# Jaon

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compiler.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/logo/: README.md  design_logo.py
docs/: index.html
docs/css/: style.css
docs/js/: main.js
editors/vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts  language.ts  symbols.ts
editors/vscode/syntaxes/: helios.tmLanguage.json  jaon.tmLanguage.json
examples/: advanced.helios  advanced.jaon  classes.helios  classes.jaon  control_flow.helios  exceptions.jaon  fibonacci.helios  hello.helios  hello.jaon  sorting.helios  sorting.jaon
helios/: __init__.py  __main__.py  analyzer.py  ast_nodes.py  builtins.py  bytecode.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  vm.py
installer/: README.md  create_icon.py  install.ps1  jaon.cmd  setup.iss  uninstall.ps1
jaon/: __init__.py  __main__.py  analyzer.py  ast_nodes.py  builtins.py  bytecode.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  vm.py
scripts/: build_exe.py  run_tests.py
sphinx-docs/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
sphinx-docs/_static/: custom.css
sphinx-docs/api/: index.rst  modules.rst  pipeline.rst
sphinx-docs/compiler/: analyzer.rst  bytecode.rst  index.rst  lexer.rst  overview.rst  parser.rst  vm.rst
sphinx-docs/language/: basics.rst  classes.rst  collections.rst  control_flow.rst  exceptions.rst  functions.rst  index.rst  modules.rst  types.rst
tests/: test_analyzer.py  test_lexer.py  test_parser.py  test_vm.py
