[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaon-lang"
version = "0.1.0"
description = "Jaon - a programming language blending Python simplicity with Java rigor"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jaon Project", email = "jaon@example.com"}
]
keywords = ["programming-language", "compiler", "interpreter", "python", "java"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "nuitka>=4.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
]

[project.scripts]
jaon = "jaon.cli:main"

[project.urls]
Homepage = "https://github.com/ExploreMaths/Jaon"
Documentation = "https://jaon.readthedocs.io"
Repository = "https://github.com/ExploreMaths/Jaon"
Issues = "https://github.com/ExploreMaths/Jaon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaon*"]
exclude = ["tests*", "sphinx-docs*", "scripts*", "examples*"]

[tool.setuptools.package-data]
jaon = ["py.typed"]
